syntax = "proto3";

package wlservice;

message Empty {}

message Filter {
  int32 wordlistID = 1;
  repeated Id filter = 2;
}

message UserId { string userID = 1; }

message Id { int32 id = 1; }

message Wordlists {
  repeated WordlistInfo wordlistInfo = 1;
  Response serverInfo = 2;
}

message WordlistInfo {
  string wordlistName = 1;
  string description = 2;
  string userID = 3;
  int32 wordlistID = 4;
  repeated Word words = 5;
  Response serverInfo = 6;
}

message Word {
  string word = 1;
  string description = 2;
  int32 Id = 3;
}

message Response {
  int32 statusCode = 1;
  string responseBody = 2;
}

service WordlistService {
  rpc loadAllWordlists(UserId) returns (Wordlists) {}
  rpc addNewWordlist(WordlistInfo) returns (Response) {}
  rpc getWordsOfWordList(Id) returns (WordlistInfo) {}
  rpc getWordExceptIDs(Filter) returns (WordlistInfo) {}
}
